Add image and content to banana bread recipe page

--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -7,6 +7,36 @@
     <title>Banana Bread Recipe</title>
 </head>
 <body>
-    <h1>Banana Bread Recipe</h1>
+    <h1 id ="top">Banana Bread Recipe</h1>
+    <img src="../images/Banana-Bread.jpg" width="400" height="500">
+
+    <h2>World-famous Banana Bread. Easy to make!</h2>
+        <p>This is recipe for making a world famous banana bread.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 bananas</li>
+        <li>190g plain flour</li>
+        <li>4 table spoons of vegetable oil</li>
+        <li>150g sugar</li>
+        <li>Vanilla extract</li>
+        <li>Powder cinnamon</li>
+    </ul>
+
+    <h3>Recipe instructions</h3>
+    <ol>
+        <li>Mash bananas</li>
+        <li>Add plain flour</li>
+        <li>Add 4 table spoons of vegetable oil</li>
+        <li>Add 150g sugar</li>
+        <li>Mix thoroughly</li>
+        <li>Add Vanilla extract</li>
+        <li>Add Powder cinnamon</li>
+        <li>Bake in oven at 18- degrees celcius for 30 minutes</li>
+    </ol>
+
+    <a href="#top">Return to top</a>
+    <p></p>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
