--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/banana_bread.html">Banana Bread</a>
+    <h1 id="top">World-Famous Recipes!</h1>
+    <img src="images/main-page.jpg">
+    <p></p>
+
+    <h2>A Collection of World-Famous Recipes!</h2>
+        <ul>
+            <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
+        </ul>
+
+    <a href="#top">Return to top</a>
+
+    
 </body>
 </html>
